--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     background-color: white;
-    background-image: url(images/Untitled_Artwork.jpg);
+    background-image: url(Untitled_Artwork.jpg);
     
     font-family:Arial, Helvetica, sans-serif;
 }
